# MatriXact

./: .gitignore  README.md
hip/: ozaki_bitmasking.cpp  ozaki_crt.cpp  ozaki_crt_benchmark.cpp  row_wise_reduction.cpp
omp/: CMakeLists.txt
omp/benchmarks/: CMakeLists.txt  bench_gemm.cpp
omp/examples/: CMakeLists.txt  main.cpp
omp/include/: matrixact_omp.hpp
omp/omp_playground/: CMakeLists.txt  omp_playground.cpp
omp/tests/: CMakeLists.txt  test_gemm_int.cpp
toy_examples/: ozaki_II.cpp
